[gd_scene format=3 uid="uid://cfojnp56c5051"]

[ext_resource type="Script" uid="uid://dtuvd8m258l6d" path="res://Utilities/Autoloads/DebugConsole/DebugConsole.gd" id="1_qnif3"]
[ext_resource type="FontVariation" uid="uid://by478cplv5w4n" path="res://Assets/Theming/Fonts/GameFontResources/pixel_font_less_margin.tres" id="2_8ir4q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnif3"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.7058824)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.45490196)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtxck"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.12941177, 0.26666668, 0.4509804, 0.7058824)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.45882353, 0.8901961, 0.42745098)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_qnif3"]
font = ExtResource("2_8ir4q")
font_size = 6
font_color = Color(1, 1, 1, 0.49019608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6gym"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.11304883, 0.11304883, 0.11304883, 0.78431374)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.4509804)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar238"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.78431374)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.4509804)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ir4q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnif3"]

[node name="DebugConsole" type="CanvasLayer" unique_id=607657224]
process_mode = 3
layer = 3
script = ExtResource("1_qnif3")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=459474586]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.0
offset_right = 57.0
offset_bottom = 5.0
grow_vertical = 0
theme_override_constants/separation = 2
alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer" unique_id=1002243518]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 0

[node name="ConsoleHistoryPanel" type="Panel" parent="VBoxContainer/MarginContainer3" unique_id=1363008120]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qnif3")

[node name="ConsoleHistoryMargins" type="MarginContainer" parent="VBoxContainer/MarginContainer3" unique_id=937402764]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = -2

[node name="ConsoleHistory" type="RichTextLabel" parent="VBoxContainer/MarginContainer3/ConsoleHistoryMargins" unique_id=1296854580]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
text = "Console history text"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="OutputOuterMargins" type="MarginContainer" parent="VBoxContainer" unique_id=475177725]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0

[node name="ConsoleOuputPanel" type="Panel" parent="VBoxContainer/OutputOuterMargins" unique_id=631885376]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtxck")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OutputOuterMargins" unique_id=1623377673]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = -2

[node name="ConsoleOutput" type="Label" parent="VBoxContainer/OutputOuterMargins/MarginContainer" unique_id=1686222527]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
text = "Console Output"
label_settings = SubResource("LabelSettings_qnif3")
vertical_alignment = 1

[node name="AutoCompleteOuterMargins" type="MarginContainer" parent="VBoxContainer" unique_id=1390437716]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = -3

[node name="ConsoleAutoCompletePanel" type="Panel" parent="VBoxContainer/AutoCompleteOuterMargins" unique_id=934895292]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y6gym")

[node name="ConsoleAutoCompleteMargins" type="MarginContainer" parent="VBoxContainer/AutoCompleteOuterMargins" unique_id=696070241]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = -2

[node name="ConsoleAutoComplete" type="RichTextLabel" parent="VBoxContainer/AutoCompleteOuterMargins/ConsoleAutoCompleteMargins" unique_id=1906771282]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
text = "Console autocomplete"
fit_content = true
scroll_following = true
autowrap_mode = 0
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" unique_id=2043150174]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/margin_left = 2

[node name="ConsoleInputPanel" type="Panel" parent="VBoxContainer/MarginContainer" unique_id=713971070]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ar238")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer" unique_id=192632970]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = -6
theme_override_constants/margin_bottom = -2

[node name="ConsoleInput" type="LineEdit" parent="VBoxContainer/MarginContainer/MarginContainer2" unique_id=204038858]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.899692, 0.899692, 0.899692, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.15)
theme_override_constants/caret_width = 1
theme_override_fonts/font = ExtResource("2_8ir4q")
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_8ir4q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qnif3")
placeholder_text = "Enter command..."
keep_editing_on_text_submit = true
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
select_all_on_focus = true
caret_blink = true
caret_mid_grapheme = true

[connection signal="text_changed" from="VBoxContainer/MarginContainer/MarginContainer2/ConsoleInput" to="." method="_on_console_input_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer/MarginContainer2/ConsoleInput" to="." method="_parse_command"]
